# OrcaSlicer-bambulab-standalone

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  build_linux.sh  build_release_macos.sh  build_release_vs.bat
.agents/: LOCATION.md
.github/workflows/: build_linux_portable.yml  build_windows_bridge.yml  my_build_all.yml
resources/profiles/OrcaFilamentLibrary/filament/COEX/: COEX NYLEX UNFILLED @System.json
scripts/: apply_pjarczak_linux_bridge_orca.py  generate_linux_payload_manifest.py
scripts/flatpak/: com.orcaslicer.OrcaSlicer.yml
scripts/linux.d/: debian
src/: CMakeLists.txt
src/libslic3r/: PrintConfig.cpp
src/slic3r/: CMakeLists.txt
src/slic3r/GUI/: DeviceManager.cpp  GUI_App.cpp  HMS.cpp  HttpServer.cpp  MediaPlayCtrl.cpp  Plater.cpp  WebUserLoginDialog.cpp  wxMediaCtrl2.cpp
src/slic3r/Utils/: BBLNetworkPlugin.cpp  Http.cpp  NetworkAgent.cpp  PresetUpdater.cpp  bambu_networking.hpp
src/slic3r/Utils/PJarczakLinuxBridge/: CMakeLists.txt  PJarczakBambuNetworkForwarderExports.cpp  PJarczakLinuxBridgeCompat.hpp  PJarczakLinuxBridgeConfig.cpp  PJarczakLinuxBridgeConfig.hpp  PJarczakLinuxSoBridgeLauncher_linux.cpp  PJarczakLinuxSoBridgeLauncher_mac.mm  PJarczakLinuxSoBridgeLauncher_win.cpp  PJarczakLinuxSoBridgeRpcClient.cpp  PJarczakLinuxSoBridgeRpcClient.hpp
tests/: CLAUDE.md
tools/pjarczak_bambu_linux_host/: CMakeLists.txt  LinuxPluginHost.cpp  LinuxPluginHost.hpp  main.cpp  package_linux_host_runtime.sh  pjarczak-bambu-linux-host-wrapper
tools/pjarczak_bambu_macos_linux_wrapper/: pjarczak_bambu_macos_linux_wrapper.sh
tools/pjarczak_bambu_runtime/: README_runtime_bridge.txt
tools/pjarczak_bambu_runtime/macos/: pjarczak_install_macos_runtime.sh  pjarczak_verify_macos_runtime.sh
tools/pjarczak_bambu_runtime/release/: assemble_windows_runtime_bundle.ps1
tools/pjarczak_bambu_runtime/rootfs/: build_windows_wsl_rootfs.ps1  build_windows_wsl_rootfs.sh
tools/pjarczak_bambu_runtime/wsl/: install_runtime.cmd  install_runtime.ps1  pjarczak_bambu_linux_host  pjarczak_plugin_cache_subdir.txt  pjarczak_wsl_distro.txt  pjarczak_wsl_run_host.sh  verify_runtime.ps1
